log
Fri, Apr 18, 2025 11:49:55 PM: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:42: error: 'pair' undeclared (first use in this function)
     map->buckets = (Pair**)malloc(sizeof(pair*)* capacity);
                                          ^~~~
hashmap.c:58:42: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:47: error: expected expression before ')' token
     map->buckets = (Pair**)malloc(sizeof(pair*)* capacity);
                                               ^
eeef3b7
Fri, Apr 18, 2025 11:50:21 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:42: error: 'pair' undeclared (first use in this function)
     map->buckets = (Pair**)malloc(sizeof(pair*)* capacity);
                                          ^~~~
hashmap.c:58:42: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:58:47: error: expected expression before ')' token
     map->buckets = (Pair**)malloc(sizeof(pair*)* capacity);
                                               ^
124af8a
Fri, Apr 18, 2025 11:50:53 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
e908376
Sat, Apr 19, 2025 12:01:22 AM: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:45:20: error: passing argument 1 of 'strcmp' from incompatible pointer type [-Werror=incompatible-pointer-types]
         if (strcmp(map->buckets[pos], key) == 0){
                    ^~~
In file included from test.c:3:0:
c:\mingw\include\string.h:77:38: note: expected 'const char *' but argument is of type 'Pair * {aka struct Pair *}'
 _CRTIMP __cdecl __MINGW_NOTHROW  int strcmp (const char *, const char *) __MINGW_ATTRIB_PURE;
                                      ^~~~~~
cc1.exe: all warnings being treated as errors
b57aa32
Sat, Apr 19, 2025 12:07:32 AM: 
 hashmap.c | 14 ++++++++------
 1 file changed, 8 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:46:24: error: passing argument 1 of 'strcasecmp' from incompatible pointer type [-Werror=incompatible-pointer-types]
         if (strcasecmp(map->buckets[pos], key) == 0 && map->buckets[pos]->key != NULL){
                        ^~~
In file included from c:\mingw\include\string.h:62:0,
                 from test.c:3:
c:\mingw\include\strings.h:63:29: note: expected 'const char *' but argument is of type 'Pair * {aka struct Pair *}'
 int __cdecl __MINGW_NOTHROW strcasecmp( const char *, const char * );
                             ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
1a27302
Sat, Apr 19, 2025 12:07:57 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
223f408
Sat, Apr 19, 2025 12:08:40 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
69cbc52
Sat, Apr 19, 2025 12:13:25 AM: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  8|3
total_score: 40/70
41981dc
Sat, Apr 19, 2025 12:17:17 AM: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
1793acf
Sat, Apr 19, 2025 12:23:36 AM: 
 hashmap.c | 16 ++++++++++++++--
 1 file changed, 14 insertions(+), 2 deletions(-)
 tests:  13|2
total_score: 50/70
35cfa56
Sat, Apr 19, 2025 12:24:36 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
120c316
Sat, Apr 19, 2025 12:27:45 AM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
f5a4a7c
Sat, Apr 19, 2025 12:28:02 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
e4f4e2c
Sat, Apr 19, 2025 12:29:12 AM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  15|2
total_score: 50/70
15432b8
Sat, Apr 19, 2025 12:31:37 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|2
total_score: 50/70
8f9fc03
Sat, Apr 19, 2025 12:32:40 AM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
c916bad
Sat, Apr 19, 2025 12:34:17 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
f4e652f
Sat, Apr 19, 2025 12:36:45 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  14|2
total_score: 50/70
55a5d47
Sat, Apr 19, 2025 12:37:18 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:125:79: error: comparison between pointer and integer [-Werror]
     if (map == NULL || map->buckets == NULL || map->size == 0 || map->current == NULL) return NULL;
                                                                               ^~
cc1.exe: all warnings being treated as errors
6958c6b
Sat, Apr 19, 2025 12:38:35 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
468510f
Sat, Apr 19, 2025 12:38:57 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
9d1fb77
Sat, Apr 19, 2025 12:39:28 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|2
total_score: 50/70
e16eccd
Sat, Apr 19, 2025 12:41:52 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  14|2
total_score: 50/70
8c599a0
Sat, Apr 19, 2025 12:44:19 AM: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  14|2
total_score: 50/70
ec79f7a
